<resources>
    <string name="app_name">Android Features</string>
    <string name="make_call">Make Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="enter_mail_id">Enter Mail ID</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="send_email">Send Email</string>
    <string name="mic_instruction">Please tap the microphone to speak</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="get_contacts">Get Contacts</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="sample_name">JungleMystic</string>
    <string name="sample_number">8309583550</string>
    <string name="search_here">Search here…</string>
    <string name="call_history">Call History</string>
    <string name="call_type">Call Type:</string>
    <string name="missed">Missed</string>
    <string name="duration">Duration:</string>
    <string name="date">Date:</string>
    <string name="sample_date">01-05-2023</string>
    <string name="flash_light">Flash Light</string>
    <string name="sound_control">Sound Control</string>
    <string name="ring_mode">Current mode is in %1$s</string>
    <string name="blink">Blink</string>
    <string name="make_a_call">Make a call</string>
    <string name="control_sounds">Control Sounds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="turn_flashlight_on_off">Turn Flashlight on/ off</string>
    <string name="get_location">Get Location</string>
    <string name="location">Location</string>
    <string name="map_view">Map View</string>
    <string name="online">Online</string>
    <string name="show_pdf">Show PDF</string>
    <string name="watch_youtube">Watch YouTube</string>
    <string name="toggle_full_screen">toggle full screen</string>
</resources>