<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/enter_mail_id"/>

        <EditText
            android:id="@+id/email_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/enter_subject"
            android:layout_marginTop="20dp"
            android:gravity="top"/>


        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/enter_your_message"
            android:layout_marginTop="20dp"
            android:gravity="top"/>

        <Button
            android:id="@+id/send_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>