<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/app_bar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/app_icon_android"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/text"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/text_font"
                    app:layout_constraintTop_toTopOf="@id/app_icon"
                    app:layout_constraintBottom_toBottomOf="@id/app_icon"
                    app:layout_constraintStart_toEndOf="@id/app_icon"
                    android:layout_marginStart="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/call_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/make_call"
                        android:backgroundTint="@color/button"/>

                    <Button
                        android:id="@+id/sms_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/send_sms"
                        android:backgroundTint="@color/button"
                        android:layout_marginStart="40dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/email_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/send_email"
                        android:backgroundTint="@color/button"/>

                    <Button
                        android:id="@+id/speech_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/speech_to_text"
                        android:layout_marginStart="40dp"
                        android:backgroundTint="@color/button"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/contacts_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/get_contacts"
                        android:backgroundTint="@color/button"/>

                    <Button
                        android:id="@+id/call_history_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/call_history"
                        android:layout_marginStart="40dp"
                        android:backgroundTint="@color/button"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/flash_light_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/flash_light"
                        android:backgroundTint="@color/button"/>

                    <Button
                        android:id="@+id/sound_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sound_control"
                        android:layout_marginStart="40dp"
                        android:backgroundTint="@color/button"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>