<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SMS_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="15"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/enter_phone_number"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:id="@+id/pick_contact"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_contact"/>

    </LinearLayout>


        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/enter_your_message"
            android:layout_marginTop="20dp"
            android:gravity="top"/>

        <Button
            android:id="@+id/send_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_sms"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>