<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/app_bar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <ImageView
                    android:id="@+id/activity_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/location_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/activity_name"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/get_location"
                    android:textColor="@color/text"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/text_font"
                    app:layout_constraintTop_toTopOf="@id/activity_icon"
                    app:layout_constraintBottom_toBottomOf="@id/activity_icon"
                    app:layout_constraintStart_toEndOf="@id/activity_icon"
                    android:layout_marginStart="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

<com.google.android.material.button.MaterialButton
    android:id="@+id/get_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/app_bar"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/get_location"
    android:layout_marginTop="40dp"
    android:layout_marginStart="20dp"/>

<TextView
    android:id="@+id/location_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/location"
    android:textSize="22sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/get_location"
    android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/location_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/location"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/map_view"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>